COMPRESS-623: Speed up ZipFile's raw stream copying by not seeking for local headers until they're needed.